src/test/deca/codegen/invalid/test_division_by_zero.deca
// Description:
//      Test la division par zero
//
// Resultat:
//      Ligne 12 : error - division par zero impossible  
// 
// Historique:
//    cree le 18/01/2022

{
    int res;
    res = 21/0;
}

